--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: h_bridge_controller_5x3
 #+AUTHOR: Peter Polidoro
-#+EMAIL: peterpolidoro@gmail.com
+#+EMAIL: peter@polidoro.io
 
 * Repository Information
   - Author :: Peter Polidoro
